# Aura

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_to_pypi.py  cosmic.css  docs-data.js  file:test_aura  index.html  mkdocs.yml  nice_content.md  pyproject.toml  site.webmanifest  space.js
.claude/agents/: arquiteto.md  engenheiro.md  po-pm.md  qa.md  research.md
.github/workflows/: ci.yml
.omo/: aura_analysis_architecture.md  aura_analysis_final.md  aura_analysis_forms_templates_admin_cli.md  aura_analysis_middleware_stack.md  aura_analysis_orm_data.md  aura_analysis_routing_security.md  aura_analysis_tests.md
aura/: __init__.py
aura/admin/: __init__.py  base.py  module.py  security.py  views.py
aura/cli/: __init__.py  main.py
aura/config/: __init__.py  base.py  loader.py
aura/core/: __init__.py  app.py  pipeline.py  request.py  response.py  router.py
aura/di/: __init__.py  container.py  decorators.py  providers.py
aura/events/: __init__.py  base.py  client.py  decorators.py  lifecycle.py  microservice.py  module.py  registry.py  wiring.py
aura/exceptions/: __init__.py  base.py  handlers.py  http.py
aura/forms/: __init__.py  base.py  exceptions.py  fields.py  modelform.py  validators.py
aura/guards/: __init__.py  base.py  jwt.py  rate_limit.py
aura/interceptors/: __init__.py  base.py  (+2 more)
docs/: README.md  WAVE3_ACCEPTANCE_CRITERIA.md  WAVE3_EXECUTIVE_SUMMARY.md  WAVE3_IMPLEMENTATION_PLAN.md  admin.md  docs-data.js  factories.md  improvement-points.md  index.md  jobs-workers.md  modules-di.md  motivation.md  orm-queries.md  orm.md  pending.md  research-templates.md  roadmap-forms-querybuilder.md  roadmap.md  schemas-validation.md  sdd.md  security-advisory.md  seeders.md  templates.md  tinker.md  version-unification.md
tests/: __init__.py  conftest.py  test_admin.py  test_app.py  test_cli.py  test_client_ip.py  test_compression.py  test_config.py  test_core_security.py  test_database_backend.py  test_di.py  test_events.py  test_exceptions.py  test_factories.py  test_forms.py  test_guards.py  test_guards_auth.py  test_html_routing.py  test_interceptors.py  test_jobs.py  test_jobs_worker.py  test_kafka_events.py  test_lifecycle.py  test_logging.py  test_message_patterns.py  test_middleware.py  test_migrate.py  test_migrations.py  test_modules.py  test_openapi.py  test_orm.py  test_orm_simplified.py  test_profiling.py  test_query_count.py  test_querybuilder.py  test_rabbitmq_events.py  test_rate_limit_redis.py  test_routing.py  test_saq_backend.py  test_scheduler.py  (+6 more)
(+98 files in other folders)
